force-app/main/default/objects/RGC_Data_Assets__c/RGC_Data_Assets__c.object-meta.xml
<CustomObject>
    <label>RGC Data Assets</label>
    <nameField>
        <label>RGC Data Assets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RGC Data Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>