force-app/main/default/objects/RGC_Data_Assets__c/fields/AGDS_Lead__c.field-meta.xml
<CustomField>
    <fullName>AGDS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AGDS Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipLabel>RGC Data Assets</relationshipLabel>
    <relationshipName>RGC_Data_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>