force-app/main/default/objects/RGC_Data_Assets__c/fields/AllxAll_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>AllxAll_Completion_Date__c</fullName>
    <label>AllxAll Completion Date</label>
    <type>Date</type>
</CustomField>