force-app/main/default/objects/RGC_Data_Assets__c/fields/Assay__c.field-meta.xml
<CustomField>
    <fullName>Assay__c</fullName>
    <label>Assay</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GxS Twist</fullName>
            </value>
            <value>
                <fullName>IDT</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>VCRome</fullName>
            </value>
            <value>
                <fullName>OLINK</fullName>
            </value>
            <value>
                <fullName>Whole Genome Sequencing</fullName>
            </value>
            <value>
                <fullName>RNAseq</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>