force-app/main/default/objects/RGC_Data_Assets__c/fields/Association_Analysis_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Association_Analysis_Pipeline__c</fullName>
    <label>Association Analysis Pipeline</label>
    <length>250</length>
    <type>Text</type>
</CustomField>