force-app/main/default/objects/RGC_Data_Assets__c/fields/Association_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Association_Run_Status__c</fullName>
    <label>Association Run Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>