force-app/main/default/objects/RGC_Data_Assets__c/fields/Beta_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Beta_Registration_Date__c</fullName>
    <label>Beta Registration Date</label>
    <type>Date</type>
</CustomField>