force-app/main/default/objects/RGC_Data_Assets__c/fields/CDM_Status__c.field-meta.xml
<CustomField>
    <fullName>CDM_Status__c</fullName>
    <label>CDM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>