force-app/main/default/objects/RGC_Data_Assets__c/fields/CEDARS_Feature_ID__c.field-meta.xml
<CustomField>
    <fullName>CEDARS_Feature_ID__c</fullName>
    <label>CEDARS Feature ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>