force-app/main/default/objects/RGC_Data_Assets__c/fields/CI_Analyst__c.field-meta.xml
<CustomField>
    <fullName>CI_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CI Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RGC_Data_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>