force-app/main/default/objects/RGC_Data_Assets__c/fields/Clinical_Informatics_Lead__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Informatics_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Informatics Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipLabel>RGC Data Assets (Clinical Informatics Lead)</relationshipLabel>
    <relationshipName>RGC_Data_Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>