force-app/main/default/objects/RGC_Data_Assets__c/fields/Collaborator_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Collaborator_Institution_Name__c</fullName>
    <formula>RGC_Collaboration_Detail__r.Collaborator_Institution_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaborator Institution Name</label>
    <type>Text</type>
</CustomField>