force-app/main/default/objects/RGC_Data_Assets__c/fields/Data_Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_Asset_ID__c</fullName>
    <label>Data Asset ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>