force-app/main/default/objects/RGC_Data_Assets__c/fields/Dataset_Registered_in_CEDARS__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Registered_in_CEDARS__c</fullName>
    <label>Dataset Registered in CEDARS</label>
    <type>Date</type>
</CustomField>