force-app/main/default/objects/RGC_Data_Assets__c/fields/Datasets_Registered__c.field-meta.xml
<CustomField>
    <fullName>Datasets_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datasets Registered</label>
    <type>Checkbox</type>
</CustomField>