force-app/main/default/objects/RGC_Data_Assets__c/fields/Datasets_Registered_in_PRMS__c.field-meta.xml
<CustomField>
    <fullName>Datasets_Registered_in_PRMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datasets Registered in PRMS</label>
    <type>Checkbox</type>
</CustomField>