force-app/main/default/objects/RGC_Data_Assets__c/fields/Date_of_Phenotype_Data_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Phenotype_Data_Receipt__c</fullName>
    <label>Date of Phenotype Data Receipt</label>
    <type>Date</type>
</CustomField>