force-app/main/default/objects/RGC_Data_Assets__c/fields/External_Owner__c.field-meta.xml
<CustomField>
    <fullName>External_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Owner</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipLabel>RGC Data Assets (External Owner)</relationshipLabel>
    <relationshipName>RGC_Data_Assets4</relationshipName>
    <type>Lookup</type>
</CustomField>