force-app/main/default/objects/RGC_Data_Assets__c/fields/Final_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Registration_Date__c</fullName>
    <label>Final Registration Date</label>
    <type>Date</type>
</CustomField>