force-app/main/default/objects/RGC_Data_Assets__c/fields/Freeze_Comparison_Status__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Comparison_Status__c</fullName>
    <label>Freeze Comparison Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>