force-app/main/default/objects/RGC_Data_Assets__c/fields/Genetic_Data_Freeze_Comments__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Data_Freeze_Comments__c</fullName>
    <label>Genetic Data Freeze Comments</label>
    <type>TextArea</type>
</CustomField>