force-app/main/default/objects/RGC_Data_Assets__c/fields/Genetic_Data_Freeze_Date__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Data_Freeze_Date__c</fullName>
    <label>Genetic Data Freeze Date</label>
    <type>Date</type>
</CustomField>