force-app/main/default/objects/RGC_Data_Assets__c/fields/Genetic_Data_Pipeline_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Data_Pipeline_Workflow__c</fullName>
    <label>Genetic Data Pipeline/Workflow</label>
    <length>250</length>
    <type>Text</type>
</CustomField>