force-app/main/default/objects/RGC_Data_Assets__c/fields/Genetic_Data_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Data_Processing_Status__c</fullName>
    <label>Genetic Data Processing Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>