force-app/main/default/objects/RGC_Data_Assets__c/fields/Genetic_Freeze_name__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Freeze_name__c</fullName>
    <label>Genetic Freeze name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>