force-app/main/default/objects/RGC_Data_Assets__c/fields/Genome_Informatics_Lead__c.field-meta.xml
<CustomField>
    <fullName>Genome_Informatics_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genome Informatics Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipLabel>RGC Data Assets (Genome Informatics Lead)</relationshipLabel>
    <relationshipName>RGC_Data_Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>