force-app/main/default/objects/RGC_Data_Assets__c/fields/Imputation_Panel__c.field-meta.xml
<CustomField>
    <fullName>Imputation_Panel__c</fullName>
    <label>Imputation Panel</label>
    <length>250</length>
    <type>Text</type>
</CustomField>