force-app/main/default/objects/RGC_Data_Assets__c/fields/Latest_Chatter_Post__c.field-meta.xml
<CustomField>
    <fullName>Latest_Chatter_Post__c</fullName>
    <label>Latest Chatter Post</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>