force-app/main/default/objects/RGC_Data_Assets__c/fields/Latest_Phenotype_Freeze_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Phenotype_Freeze_Name__c</fullName>
    <label>Latest Phenotype Freeze Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>