force-app/main/default/objects/RGC_Data_Assets__c/fields/Link_to_PheWeb__c.field-meta.xml
<CustomField>
    <fullName>Link_to_PheWeb__c</fullName>
    <label>Link to PheWeb</label>
    <type>Url</type>
</CustomField>