force-app/main/default/objects/RGC_Data_Assets__c/fields/Link_to_QC_Report__c.field-meta.xml
<CustomField>
    <fullName>Link_to_QC_Report__c</fullName>
    <label>Link to QC Report</label>
    <type>Url</type>
</CustomField>