force-app/main/default/objects/RGC_Data_Assets__c/fields/Matrix_Generation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Generation_Completion_Date__c</fullName>
    <label>Matrix Generation Completion Date</label>
    <type>Date</type>
</CustomField>