force-app/main/default/objects/RGC_Data_Assets__c/fields/Matrix_Generation_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Generation_StartDate__c</fullName>
    <label>Matrix Generation StartDate</label>
    <type>Date</type>
</CustomField>