force-app/main/default/objects/RGC_Data_Assets__c/fields/Matrix_Priority__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Priority__c</fullName>
    <label>Matrix Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>