force-app/main/default/objects/RGC_Data_Assets__c/fields/Matrix_Stage__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Stage__c</fullName>
    <label>Matrix Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raw Data Evaluation</fullName>
            </value>
            <value>
                <fullName>Matrix Generation</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>