force-app/main/default/objects/RGC_Data_Assets__c/fields/Medications__c.field-meta.xml
<CustomField>
    <fullName>Medications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medications</label>
    <type>Checkbox</type>
</CustomField>