force-app/main/default/objects/RGC_Data_Assets__c/fields/Number_of_traits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_traits__c</fullName>
    <label>Number of traits</label>
    <length>250</length>
    <type>Text</type>
</CustomField>