force-app/main/default/objects/RGC_Data_Assets__c/fields/OMOP_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>OMOP_Data_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OMOP Data Available</label>
    <type>Checkbox</type>
</CustomField>