force-app/main/default/objects/RGC_Data_Assets__c/fields/PheCode_Generated__c.field-meta.xml
<CustomField>
    <fullName>PheCode_Generated__c</fullName>
    <label>PheCode Generated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>