force-app/main/default/objects/RGC_Data_Assets__c/fields/Phenotype_Data_Received__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Data_Received__c</fullName>
    <label>Phenotype Data Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>