force-app/main/default/objects/RGC_Data_Assets__c/fields/Phenotype_Data_Version__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Data_Version__c</fullName>
    <label>Phenotype Data Version</label>
    <length>250</length>
    <type>Text</type>
</CustomField>