force-app/main/default/objects/RGC_Data_Assets__c/fields/Phenotype_Matrices__c.field-meta.xml
<CustomField>
    <fullName>Phenotype_Matrices__c</fullName>
    <label>CI Production Phenotype Matrices</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>