force-app/main/default/objects/RGC_Data_Assets__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IF(
  ISPICKVAL(Matrix_Priority__c, &quot;Low&quot;), 
  IMAGE(&quot;/resource/1725636490000/GraphicsPackNew/fatcow/farmfresh/32/flag_green.png&quot;, &quot;Low Priority&quot;),
  IF(
    ISPICKVAL(Matrix_Priority__c, &quot;Medium&quot;),
    IMAGE(&quot;/resource/1725636490000/GraphicsPackNew/fatcow/farmfresh/32/flag_orange.png&quot;, &quot;Medium Priority&quot;),
    IF(
      ISPICKVAL(Matrix_Priority__c, &quot;High&quot;),   
      IMAGE(&quot;/resource/1725636490000/GraphicsPackNew/fatcow/farmfresh/32/flag_red.png&quot;, &quot;High Priority&quot;), 
      NULL
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>