force-app/main/default/objects/RGC_Data_Assets__c/fields/Production_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Production_Asset_Type__c</fullName>
    <label>Production Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production Run</fullName>
            </value>
            <value>
                <fullName>Phenotype Matrix</fullName>
            </value>
            <value>
                <fullName>Genetic Data Freeze</fullName>
            </value>
            <value>
                <fullName>All X All Refresh</fullName>
            </value>
            <value>
                <fullName>Sequencing Update</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>