force-app/main/default/objects/RGC_Data_Assets__c/fields/Projected_Matrix_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Matrix_Completion_Date__c</fullName>
    <label>Matrix Completion Date</label>
    <type>Date</type>
</CustomField>