force-app/main/default/objects/RGC_Data_Assets__c/fields/Raw_phenotype_data_DNAnexus_project_loca__c.field-meta.xml
<CustomField>
    <fullName>Raw_phenotype_data_DNAnexus_project_loca__c</fullName>
    <inlineHelpText>Raw phenotype data DNAnexus project location</inlineHelpText>
    <label>Raw phenotype data DNAnexus project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>