force-app/main/default/objects/RGC_Data_Assets__c/fields/Raw_QA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Raw_QA_Completion_Date__c</fullName>
    <label>Raw QA Completion Date</label>
    <type>Date</type>
</CustomField>