force-app/main/default/objects/RGC_Data_Assets__c/fields/Raw_to_Vetted_Status__c.field-meta.xml
<CustomField>
    <fullName>Raw_to_Vetted_Status__c</fullName>
    <label>Raw to Vetted Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Start</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pending Collaborator Response</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>