force-app/main/default/objects/RGC_Data_Assets__c/fields/Results_Available_in_S3__c.field-meta.xml
<CustomField>
    <fullName>Results_Available_in_S3__c</fullName>
    <label>Results Available in S3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>