force-app/main/default/objects/RGC_Data_Assets__c/fields/Reviewed_at_PDR__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_at_PDR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed at PDR</label>
    <type>Checkbox</type>
</CustomField>