force-app/main/default/objects/RGC_Data_Assets__c/fields/RGC_Collaboration_Detail__c.field-meta.xml
<CustomField>
    <fullName>RGC_Collaboration_Detail__c</fullName>
    <label>RGC Collaboration Detail</label>
    <referenceTo>RGC_Collaboration__c</referenceTo>
    <relationshipLabel>RGC Data Assets</relationshipLabel>
    <relationshipName>RGC_Data_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>