force-app/main/default/objects/RGC_Data_Assets__c/fields/RGC_Related_Data_Assets__c.field-meta.xml
<CustomField>
    <fullName>RGC_Related_Data_Assets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RGC Related Data Asset</label>
    <referenceTo>RGC_Data_Assets__c</referenceTo>
    <relationshipLabel>RGC Data Assets</relationshipLabel>
    <relationshipName>RGC_Data_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>