force-app/main/default/objects/RGC_Data_Assets__c/fields/Samples_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Samples_Sequenced__c</fullName>
    <label>Samples Sequenced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>