force-app/main/default/objects/RGC_Data_Assets__c/fields/Sequencing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sequencing_Comments__c</fullName>
    <label>Sequencing Comments</label>
    <type>TextArea</type>
</CustomField>