force-app/main/default/objects/RGC_Data_Assets__c/fields/Special_Data__c.field-meta.xml
<CustomField>
    <fullName>Special_Data__c</fullName>
    <label>Special Data</label>
    <length>250</length>
    <type>Text</type>
</CustomField>