force-app/main/default/objects/RGC_Data_Assets__c/fields/Standard_Dx__c.field-meta.xml
<CustomField>
    <fullName>Standard_Dx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Dx</label>
    <type>Checkbox</type>
</CustomField>