force-app/main/default/objects/RGC_Data_Assets__c/fields/TAG_Lead__c.field-meta.xml
<CustomField>
    <fullName>TAG_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAG Lead</label>
    <referenceTo>RGC_Lead__c</referenceTo>
    <relationshipLabel>RGC Data Assets (TAG Lead)</relationshipLabel>
    <relationshipName>RGC_Data_Assets3</relationshipName>
    <type>Lookup</type>
</CustomField>