force-app/main/default/objects/RGC_Data_Assets__c/fields/Total_patients_with_phenotype_data__c.field-meta.xml
<CustomField>
    <fullName>Total_patients_with_phenotype_data__c</fullName>
    <label>Total patients with phenotype data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>