force-app/main/default/objects/RGC_Data_Assets__c/fields/Total_Samples_Expected_LEGACY__c.field-meta.xml
<CustomField>
    <fullName>Total_Samples_Expected_LEGACY__c</fullName>
    <label>Total Samples Expected [LEGACY]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>