force-app/main/default/objects/RGC_Data_Assets__c/fields/Tubes_Sent_to_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Tubes_Sent_to_Collaborator__c</fullName>
    <label>Tubes Sent to Collaborator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>